# kernel_upgrade

./: README.md  deepagent.md  design.md  feasibility_prompt.md  pyproject.toml  run_agent.py  run_api.py  run_mcp_server.py  subgraph.md  system_prompt.md  verify_retriever.py
chroma_db/: chroma.sqlite3
kernel_upgrade_skill/: design.md  requirement.md
kernel_upgrade_skill/.agent/rules/: claude-code-skills.md
kernel_upgrade_skill/.claude/skills/kernel-migrator/: SKILL.md
kernel_upgrade_skill/.claude/skills/kernel-migrator/prompts/: fallback_knowledge.tmpl  refactor.tmpl  review.tmpl
kernel_upgrade_skill/tests/: repro_issue.c
src/agent/: deep_agent.py  graph.py  nodes.py  state.py  tools.py  utils.py
src/api/: server.py
src/mcp_server/: server.py  tools.py
src/rag/: dify_cocci_formatter.py  embeddings.py  ingest.py  retriever.py
src/rag/chroma_db/627153cf-b57d-442a-bd55-8e0cc25c94c0/: index_metadata.pickle
tests/: test_api.py
